[package]
name = "bunmacs-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
env_logger = "0.10"
font-kit = "0.11"
log = "0.4"
memoffset = "0.8.0"
qcell = "0.5.3"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread"] }
wgpu = "0.16"
wgpu_glyph = "0.20.0"
winit = "0.28"
